[package]
name = "barn"
version = "0.0.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
description = "Provides persistent space for Copy-On-Write structures and other animals."
license = "MIT"
repository = "https://github.com/s3bk/barn.git"

[dependencies]
memmap = "*"
ordermap = { path = "../ordermap" }
