[package]
name = "barn"
version = "0.0.1"
authors = ["Sebastian Köln <sebk@rynx.org>"]
description = "Provides persistent space for Copy-On-Write structures and other animals."
license = "MIT"
repository = "https://github.com/s3bk/barn.git"

[dependencies]
memmap = { git = "https://github.com/s3bk/memmap-rs.git" }
istring = { git = "https://github.com/s3bk/istring.git" }
parking_lot = "*"
syscall-alt = "*"
tuple = "*"

[dev-dependencies]
simple-signal = "*"
