[package]
name = "barn"
version = "0.0.1"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]
description = "Provides persistent space for Copy-On-Write structures."
license = "MIT"
repository = "https://github.com/s3bk/barn.git"
edition = "2018"

[dependencies]
memmap2 = "*"
istring = "0.2.2"
parking_lot = "*"
syscalls = "*"
tuple = "*"
libc = "*"

[dev-dependencies]
simple-signal = "*"
